--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <AssemblyName>Symbolica.Application</AssemblyName>
-    <IsPackable>false</IsPackable>
+    <IsPackable>False</IsPackable>
     <OutputType>Exe</OutputType>
     <RootNamespace>Symbolica.Application</RootNamespace>
     <TargetFramework>net5.0</TargetFramework>
