Make Deserialization directly aware of Representation because Execution does not need to know about it.

--- a/src/Deserialization/Deserialization.csproj
+++ b/src/Deserialization/Deserialization.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Execution\Execution.csproj" />
+    <ProjectReference Include="..\Representation\Representation.csproj" />
   </ItemGroup>
 
 </Project>
