--- a/.github/workflows/publish-docker-images.yml
+++ b/.github/workflows/publish-docker-images.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - master
+    tags:
+      - "*"
   pull_request:
 jobs:
   build-image:
@@ -19,13 +21,6 @@ jobs:
       - name: Run GitVersion
         id: gitversion
         uses: gittools/actions/gitversion/execute@v0.9.9
-      - name: Generate Tags
-        id: tags
-        uses: ./.github/actions/docker-tags
-        with:
-          name: symbolica/build
-          is-latest: ${{ steps.gitversion.outputs.preReleaseTag == '' }}
-          version: ${{ steps.gitversion.outputs.nuGetVersionV2 }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -38,13 +33,18 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Build container
         uses: docker/build-push-action@v2
         with:
           context: lib/build
           builder: ${{ steps.buildx.outputs.name }}
-          push: false
-          tags: ${{ steps.tags.outputs.tags }}
+          push: true
+          tags: symbolica/build:${{ steps.gitversion.outputs.nuGetVersionV2 }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
   translate-image:
@@ -61,13 +61,6 @@ jobs:
       - name: Run GitVersion
         id: gitversion
         uses: gittools/actions/gitversion/execute@v0.9.9
-      - name: Generate Tags
-        id: tags
-        uses: ./.github/actions/docker-tags
-        with:
-          name: symbolica/translate
-          is-latest: ${{ steps.gitversion.outputs.preReleaseTag == '' }}
-          version: ${{ steps.gitversion.outputs.nuGetVersionV2 }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -80,12 +73,17 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Build container
         uses: docker/build-push-action@v2
         with:
           context: lib/translate
           builder: ${{ steps.buildx.outputs.name }}
-          push: false
-          tags: ${{ steps.tags.outputs.tags }}
+          push: true
+          tags: symbolica/translate:${{ steps.gitversion.outputs.nuGetVersionV2 }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
