Try add curly braces.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,9 +29,9 @@ jobs:
       run: | 
         version=${{ steps.gitversion.outputs.nuGetVersionV2 }}
         if [ "${{ github.event_name }}" == "pull_request" ] then
-            version=$version-${{ steps.gitversion.outputs.shortSha }}
+            version=${version}-${{ steps.gitversion.outputs.shortSha }}
         fi
-        dotnet build -c Release -p:Version=$version
+        dotnet build -c Release -p:Version=${version}
     - name: Test
       run: dotnet test -c Release --no-build
     - name: NuGet Push
