--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,8 @@ jobs:
           nugetPush: true
         - os: windows-2019
           nugetPush: false
+        - os: macos-11.0
+          nugetPush: false
     steps:
     - name: Checkout code
       uses: actions/checkout@master
