--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,6 @@ jobs:
           nugetPush: false
         - os: macos-10.15
           nugetPush: false
-          buildArgs: '--runtime macos'
     steps:
     - name: Checkout code
       uses: actions/checkout@master
@@ -42,7 +41,7 @@ jobs:
         then
             version=${version}-${{ steps.gitversion.outputs.shortSha }}
         fi
-        dotnet build -c Release -p:Version=${version} ${{ matrix.buildArgs }}
+        dotnet build -c Release -p:Version=${version}
       shell: bash
     - name: Test
       run: dotnet test -c Release --no-build
