--- a/src/Computation/Computation.csproj
+++ b/src/Computation/Computation.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Z3.x64" Version="4.8.10" />
+    <PackageReference Include="Microsoft.Z3" Version="4.8.11" />
   </ItemGroup>
 
 </Project>
