Decouple Execution from Deserialization (by moving its call to Application) and Implementation (by flipping the dependency).

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Computation\Computation.csproj" />
     <ProjectReference Include="..\Deserialization\Deserialization.csproj" />
+    <ProjectReference Include="..\Implementation\Implementation.csproj" />
   </ItemGroup>
 
 </Project>
