--- a/.github/workflows/publish-docker-images.yml
+++ b/.github/workflows/publish-docker-images.yml
@@ -9,6 +9,13 @@ on:
 jobs:
   build-image:
     runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        include:
+        - imageName: build
+          dockerContext: lib/build
+        - imageName: translate
+          dockerContext: lib/translate
     steps:
     - name: Checkout code
       uses: actions/checkout@master
@@ -30,9 +37,9 @@ jobs:
       uses: actions/cache@v2
       with:
         path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-${{ github.job }}-buildx-${{ github.sha }}
+        key: ${{ runner.os }}-${{ matrix.imageName }}-buildx-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-${{ github.job }}-buildx-
+          ${{ runner.os }}-${{ matrix.imageName }}-buildx-
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
@@ -41,49 +48,9 @@ jobs:
     - name: Build container
       uses: docker/build-push-action@v2
       with:
-        context: lib/build
+        context: ${{ matrix.dockerContext }}
         builder: ${{ steps.buildx.outputs.name }}
         push: true
-        tags: symbolica/build:${{ steps.gitversion.outputs.nuGetVersionV2 }}
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache
-  translate-image:
-    runs-on: ubuntu-18.04
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@master
-      with:
-        fetch-depth: 0
-    - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v0.9.9
-      with:
-        versionSpec: "5.6.9"
-    - name: Run GitVersion
-      id: gitversion
-      uses: gittools/actions/gitversion/execute@v0.9.9
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v1
-    - name: Cache Docker layers
-      uses: actions/cache@v2
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-${{ github.job }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-${{ github.job }}-buildx-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-    - name: Build container
-      uses: docker/build-push-action@v2
-      with:
-        context: lib/translate
-        builder: ${{ steps.buildx.outputs.name }}
-        push: true
-        tags: symbolica/translate:${{ steps.gitversion.outputs.nuGetVersionV2 }}
+        tags: symbolica/${{ matrix.imageName }}:${{ steps.gitversion.outputs.nuGetVersionV2 }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
