--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         include:
         - os: ubuntu-20.04
@@ -34,6 +35,9 @@ jobs:
     - name: Run GitVersion
       id: gitversion
       uses: gittools/actions/gitversion/execute@v0.9.9
+    - name: Add GitHub NuGet Feed
+      run: dotnet nuget add source --name z3-prerelease "https://www.myget.org/F/z3-symbolica-test/api/v3/index.json"
+      shell: bash
     - name: Build
       run: |
         version=${{ steps.gitversion.outputs.nuGetVersionV2 }}
