--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,9 @@ jobs:
     - name: Run GitVersion
       id: gitversion
       uses: gittools/actions/gitversion/execute@v0.9.9
+    - name: Nuke the local NuGet package cache
+      run: dotnet nuget locals all -c
+      shell: bash
     - name: Add GitHub NuGet Feed
       run: dotnet nuget add source --name z3-prerelease "https://www.myget.org/F/z3-symbolica-test/api/v3/index.json"
       shell: bash
