Use the Symbolica Z3 package and test on ubuntu 18.

--- a/src/Computation/Computation.csproj
+++ b/src/Computation/Computation.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Z3" Version="4.8.11" />
+    <PackageReference Include="Symbolica.Z3" Version="0.1.0-pullrequest0001-0008-d724867" />
   </ItemGroup>
 
 </Project>
