Add a macos build to the matrix for the dotnet code. (#12)

--- a/src/Computation/Computation.csproj
+++ b/src/Computation/Computation.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Z3.x64" Version="4.8.10" />
+    <PackageReference Include="Symbolica.Z3" Version="0.1.0-master0001" />
   </ItemGroup>
 
 </Project>
