--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,11 @@ jobs:
     strategy:
       matrix:
         include:
-        - os: ubuntu-20.04
+        - os: ubuntu-18.04
           nugetPush: true
         - os: windows-2019
+          nugetPush: false
+        - os: macos-10.15
           nugetPush: false
     steps:
     - name: Checkout code
@@ -53,7 +55,7 @@ jobs:
           **/*.snupkg
         retention-days: 1
   nuget-push:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-18.04
     needs: [build]
     steps:
     - name: Download NuGet Packages
