--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,9 @@ jobs:
     - name: Setup WSL distribution
       if: runner.os == 'Windows'
       run: |
-        Invoke-WebRequest -Uri https://aka.ms/wsl-ubuntu-1804 -OutFile Ubuntu.zip -UseBasicParsing
-        Expand-Archive .\Ubuntu.zip
-        Start-Process Ubuntu\ubuntu.exe
+        Invoke-WebRequest -Uri https://aka.ms/wsl-ubuntu-1804 -OutFile ubuntu.zip -UseBasicParsing
+        Expand-Archive .\ubuntu.zip
+        Start-Process ubuntu\ubuntu1804.exe --root
     - name: Setup dotnet SDK
       uses: actions/setup-dotnet@v1
       with:
