--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,10 @@ jobs:
         Invoke-WebRequest -Uri https://aka.ms/wsl-ubuntu-1804 -OutFile ubuntu.zip -UseBasicParsing
         Expand-Archive .\ubuntu.zip
         Start-Process ubuntu\ubuntu1804.exe --root
+    - name: Test WSL distribution
+      if: runner.os == 'Windows'
+      run: wsl apt-get update
+      shell: bash
     - name: Setup dotnet SDK
       uses: actions/setup-dotnet@v1
       with:
