--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,8 @@ jobs:
     - name: Setup WSL distribution
       if: runner.os == 'Windows'
       run: |
-        Invoke-WebRequest -Uri https://aka.ms/wsl-ubuntu-1804 -OutFile ubuntu.zip -UseBasicParsing
-        Expand-Archive .\ubuntu.zip
-        Start-Process ubuntu\ubuntu1804.exe --root
+        Invoke-WebRequest -Uri https://aka.ms/wsl-ubuntu-1804 -OutFile Ubuntu.appx -UseBasicParsing
+        Add-AppxPackage Ubuntu.appx
     - name: Test WSL distribution
       if: runner.os == 'Windows'
       run: wsl apt-get update
