Import the Appx module.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Setup WSL distribution
       if: runner.os == 'Windows'
       run: |
+        Import-Module Appx
         Invoke-WebRequest -Uri https://aka.ms/wsl-ubuntu-1804 -OutFile Ubuntu.appx -UseBasicParsing
         Add-AppxPackage Ubuntu.appx
     - name: Test WSL distribution
