Sling the sign end to end tests back in.

--- a/tests/Application.Tests/Application.Tests.csproj
+++ b/tests/Application.Tests/Application.Tests.csproj
@@ -17,4 +17,9 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="fail\**" />
+    <None Remove="pass\**" />
+  </ItemGroup>
+
 </Project>
