--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -81,7 +81,7 @@ jobs:
           setupEnv: .\lib\Setup-WSL.ps1 && wsl ./lib/install-deps.sh && wsl ./lib/install-local.sh
           nugetPush: false
         - os: macos-10.15
-          setupEnv: curl -O https://desktop.docker.com/mac/stable/amd64/Docker.dmg > ./Docker.dmg && hdiutil attach Docker.dmg && cp -R /Volumes/Docker/Docker.app /Applications && hdiutil detach /Volumes/Docker && open /Applications/Docker.app && echo "DOCKER_BUILD_IMAGE=symbolica/build:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV && echo "DOCKER_TRANSLATE_IMAGE=symbolica/translate:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV
+          setupEnv: brew install docker docker-compose && curl -O -sSL https://download.docker.com/mac/stable/31259/Docker.dmg && open -W Docker.dmg && cp -r /Volumes/Docker/Docker.app /Applications && sudo /Applications/Docker.app/Contents/MacOS/Docker --quit-after-install --unattended && echo "DOCKER_BUILD_IMAGE=symbolica/build:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV && echo "DOCKER_TRANSLATE_IMAGE=symbolica/translate:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV
           nugetPush: false
     steps:
     - name: Checkout code
