--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -75,10 +75,10 @@ jobs:
           setupScript: echo "SYMBOLICA_BUILD_IMAGE=symbolica/build:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV && echo "SYMBOLICA_TRANSLATE_IMAGE=symbolica/translate:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV
           nugetPush: true
         - os: ubuntu-18.04
-          setupScript: sudo ./lib/install-deps.sh && ./lib/install-local.sh
+          setupScript: sudo ./lib/install-deps.sh && ./lib/install-symbolica.sh
           nugetPush: false
         - os: windows-2019
-          setupScript: .\lib\Setup-WSL.ps1 && wsl ./lib/install-deps.sh && wsl ./lib/install-local.sh
+          setupScript: .\lib\Setup-WSL.ps1 && wsl ./lib/install-deps.sh && wsl ./lib/install-symbolica.sh
           nugetPush: false
         - os: macos-10.15
           setupScript: ./lib/setup-mac.sh && eval "$(docker-machine env default)" && env | grep DOCKER >> $GITHUB_ENV && echo "SYMBOLICA_BUILD_IMAGE=symbolica/build:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV && echo "SYMBOLICA_TRANSLATE_IMAGE=symbolica/translate:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV
