--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -72,16 +72,33 @@ jobs:
       matrix:
         include:
         - os: ubuntu-18.04
-          setupScript: echo "SYMBOLICA_BUILD_IMAGE=symbolica/build:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV && echo "SYMBOLICA_TRANSLATE_IMAGE=symbolica/translate:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV
+          setupScript: |
+            echo "SYMBOLICA_BUILD_IMAGE=symbolica/build:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV
+            echo "SYMBOLICA_TRANSLATE_IMAGE=symbolica/translate:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV
           nugetPush: true
         - os: ubuntu-18.04
-          setupScript: sudo ./lib/install-deps.sh && ./lib/install-symbolica.sh
+          setupScript: |
+            sudo ./lib/install-deps.sh
+            ./lib/install-symbolica.sh
           nugetPush: false
         - os: windows-2019
-          setupScript: .\lib\Setup-WSL.ps1 && wsl ./lib/install-deps.sh && wsl ./lib/install-symbolica.sh
+          setupScript: |
+            Invoke-WebRequest -Uri https://aka.ms/wsl-ubuntu-1804 -OutFile ubuntu.zip
+            Expand-Archive ubuntu.zip
+            .\ubuntu\ubuntu1804.exe install --root
+            wsl ./lib/install-deps.sh
+            wsl ./lib/install-symbolica.sh
           nugetPush: false
         - os: macos-10.15
-          setupScript: ./lib/setup-mac.sh && eval "$(docker-machine env default)" && env | grep DOCKER >> $GITHUB_ENV && echo "SYMBOLICA_BUILD_IMAGE=symbolica/build:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV && echo "SYMBOLICA_TRANSLATE_IMAGE=symbolica/translate:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV
+          setupScript: |
+            mkdir -p ~/.docker/machine/cache
+            curl -Lo ~/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v19.03.12/boot2docker.iso
+            brew install docker docker-machine
+            docker-machine create --driver virtualbox default
+            eval "$(docker-machine env default)"
+            env | grep DOCKER >> $GITHUB_ENV
+            echo "SYMBOLICA_BUILD_IMAGE=symbolica/build:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV
+            echo "SYMBOLICA_TRANSLATE_IMAGE=symbolica/translate:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV
           nugetPush: false
     steps:
     - name: Checkout code
