--- a/tests/Application.Tests/Application.Tests.csproj
+++ b/tests/Application.Tests/Application.Tests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <AssemblyName>Symbolica.Application.Tests</AssemblyName>
     <RootNamespace>Symbolica.Application</RootNamespace>
+    <RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == ''">$(NETCoreSdkRuntimeIdentifier)</RuntimeIdentifier>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
