--- a/src/Deserialization/Deserialization.csproj
+++ b/src/Deserialization/Deserialization.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="libLLVM" Version="12.0.0" />
     <PackageReference Include="LLVMSharp" Version="12.0.0-beta1" />
   </ItemGroup>
 
