--- a/src/Deserialization/Deserialization.csproj
+++ b/src/Deserialization/Deserialization.csproj
@@ -12,11 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="libLLVM.runtime.ubuntu.18.04-x64" Version="12.0.0" />
-    <PackageReference Include="libLLVM.runtime.ubuntu.20.04-x64" Version="12.0.0" />
-    <PackageReference Include="libLLVM.runtime.win-x64" Version="12.0.0" />
-    <PackageReference Include="libLLVM.runtime.osx-x64" Version="12.0.0" />
-    <PackageReference Include="LLVMSharp" Version="12.0.0-beta1" />
+    <PackageReference Include="Symbolica.LLVMSharp" Version="0.1.0-pullrequest0001-0002-ba8c2e9" />
   </ItemGroup>
 
 </Project>
