Fix bad copy-paste of push flag.

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -80,7 +80,7 @@ jobs:
           setupScript: |
             echo "SYMBOLICA_BUILD_IMAGE=symbolica/build:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV
             echo "SYMBOLICA_TRANSLATE_IMAGE=symbolica/translate:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV
-          nugetPush: true
+          nugetPush: false
         - os: ubuntu-18.04
           setupScript: |
             sudo ./lib/install-deps.sh
