--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -83,12 +83,12 @@ jobs:
           nugetPush: false
         - os: ubuntu-18.04
           setupScript: |
-            sudo ./lib/install-deps.sh
+            sudo ./lib/install-bionic.sh
             ./lib/install-symbolica.sh
           nugetPush: false
         - os: ubuntu-20.04
           setupScript: |
-            sudo ./lib/install-deps.sh
+            sudo ./lib/install-focal.sh
             ./lib/install-symbolica.sh
           nugetPush: false
         - os: windows-2019
@@ -96,7 +96,15 @@ jobs:
             Invoke-WebRequest -Uri https://aka.ms/wsl-ubuntu-1804 -OutFile ubuntu.zip
             Expand-Archive ubuntu.zip
             .\ubuntu\ubuntu1804.exe install --root
-            wsl ./lib/install-deps.sh
+            wsl ./lib/install-bionic.sh
+            wsl ./lib/install-symbolica.sh
+          nugetPush: false
+        - os: windows-2019
+          setupScript: |
+            Invoke-WebRequest -Uri https://aka.ms/wslubuntu2004 -OutFile ubuntu.zip
+            Expand-Archive ubuntu.zip
+            .\ubuntu\ubuntu2004.exe install --root
+            wsl ./lib/install-focal.sh
             wsl ./lib/install-symbolica.sh
           nugetPush: false
         - os: macos-10.15
